Reduce rawtypes